--- a/states/svg/svg.html
+++ b/states/svg/svg.html
@@ -1,28 +1,29 @@
 <div class="svg-container">
   <aside><span class="rot90">{{state}}</span></aside>
+  <!-- ===========top-right-box============ -->
+  <div class="w40 top-right-box"><h3 class="chtitle orange">Setup SVGs</h3>
+  <pre class="dkred">  1. Export from AI with advanced-> "style elements"
+  2. Optimize! <a href="https://jakearchibald.github.io/svgomg/" target="_blank">SVG OMG</a>
+  3. Replace ids with classes cmd-f id=" (replace all with class=")
+  4.<span class="ivr">Embed with:</span>
+  5. <span class="wh">PreserveAspect ratio</span>
+  6. Add classname to svg & insert styles from SVG embedded into style rule in sass.
+  < object type="image/svg+xml" data="bblogo.svg">no SVG 😭 < /object>
+  <span class="ivr">External SVG begins with:</span>
+  < ?xml-stylesheet type="text/css" href="css/master.css"?>
+
+  <span class="ivr">then, < svg> ...< /svg></span>
+  <span class="y dkbg ctrtxt"><b><</b>svg .... preserveAspectRatio="xMinYMin meet" width="100%" height="100%"<b>></b></span>
+  (This ensures that everything is scalable at the proper aspect ratio)
+  7. You can safely erase version attrs, but erase xmlns attrs ONLY if inline in HTML
+  8. RWD: change default W/H to percentage values.
+</pre></div>
+
+  <!-- ===================================END OF TOP-RIGHT-BOX=================================== -->
+
   <div class="svg-entry entry">
 <pre>
     <!-- pre for all -->
-<!-- ===========top-right-box============ -->
-<div class="simple-frame w40 dkbg top-right-box sand"><span class="med orange underline">Setup SVGs</span>
-1. Export from AI with advanced-> "style elements"
-2. Optimize! <a href="https://jakearchibald.github.io/svgomg/" target="_blank">SVG OMG</a>
-3. Replace ids with classes cmd-f id=" (replace all with class=");6. Add classname to svg & insert styles from SVG embedded into style rule in sass.
-<pre class="dkbg sm">4.<span class="ivr">Embed with:</span>
-< object type="image/svg+xml" data="bblogo.svg">no SVG 😭 < /object>
-
-<span class="ivr">External SVG begins with:</span>
-< ?xml-stylesheet type="text/css" href="css/master.css"?>
-
-<span class="ivr">then, < svg> ...< /svg></span></pre>
-5. <span class="wh">PreserveAspect ratio</span>
-<span class="y dkbg ctrtxt"><b><</b>svg .... preserveAspectRatio="xMinYMin meet" width="100%" height="100%"<b>></b></span>
-(This ensures that everything is scalable at the proper aspect ratio)
-6. You can safely erase version attrs, but erase xmlns attrs ONLY if inline in HTML
-7. RWD: change default w/h to percentage values.
-</div>
-
-<!-- ===================================END OF TOP-RIGHT-BOX=================================== -->
 <div class="ivr"><span class="ltgreen">Elements</span>
 < g> element
 < defs> element
