--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,27 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Wednesday May 19th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">I'm back to SQL. Getting comfortable in closures.
+    Reviewing and taking notes on SQL lectures. It's going well.
+    Progress is a tough thing to measure, but it's purposeful, hard and rewarding.
+    'Rewarding' is an empty, stale word for fun as hell! It doesn't touch the surface of what's it feels like. That said. I'm still behind in the skills I really want to hone & have done NO D3.js for months!</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Get a bite into D3.js</li>
+    <li>Photoshop!</li>
+    <li>Build a schema</li>
+    <li>Start thinking about hosting</li>
+    <li>The pages in this ang-app must be styled properly--They're a mess. It's a hodgepodge of styling still</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Lots of SQL Query notes.</li>
+    <li>Returned to Postico...though very rudimentary playing around</li>
+  </ol>
+  <hr />
   <h2 class="date">Tuesday May 30th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Lots of work revisiting closures. Javascript page is significantly larger and sluggish. Ought, sometime, to begin looking into page-weight. --This ought to be a SPA after all.</h3>
