--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,21 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Friday May 19th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Real Life took over today. I'm getting more comfortable in SQL doing intermediate queries. The notes taken here will serve me well in the future.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Connect postgres to node in a project as an exercise using massive.js</li>
+    <li>CSS 3d cube</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Wednesday May 19th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">I'm back to SQL. Getting comfortable in closures.
@@ -36,6 +51,7 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>Lots of SQL Query notes.</li>
+    <li>finished Jason Staten SQL lectures. Schema Built with 2 joins</li>
     <li>Returned to Postico...though very rudimentary playing around</li>
   </ol>
   <hr />
