--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -30,7 +30,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>node massive project</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday May 19th, 2017</h2>
