--- a/states/sql/sql.html
+++ b/states/sql/sql.html
@@ -10,6 +10,7 @@
   <i class="orange">DROP TABLE</i> table_name;
   <i class="orange">ALTER TABLE</i> <em class="y">Name</em> <i class="orange">ADD COLUMN </i><em class="y">col_Name</em>
                                                  <i class="orange">INTEGER REFERENCES</i><em class="y">pets(petID)</em>
+  <i class="ltblue">massive.js</i>
   <a class="fRight" target="_blank" href="https://chinook.ml/">Test in CHINOOK</a>
   </pre></div>
   <div class="sql-entry entry">
