--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,6 +31,9 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>node massive project</li>
+    <a href="https://github.com/statianzo/sql-setup">setting up a DB on Heroku</a>
+    <li>completed HEROKU db /beau <a href="https://dashboard.heroku.com/apps">my HEROKU Dashboard</a></li>
+
   </ol>
   <hr />
   <h2 class="date">Wednesday May 19th, 2017</h2>
