--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,8 +18,23 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Friday May 19th, 2017</h2>
-  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h2 class="date">Friday June 3rd, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Contending with real life well. So glad to get DB up and running. Heroku is much easier now. Connecting with massive with the <em>"connectionString"</em> ? --not so much. Will get to that today.
+  I am using sqltabs which--finally--has a nice simple interface. Damn, does good ux make a difference...</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Thursday, June 2nd, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Real Life took over today. I'm getting more comfortable in SQL doing intermediate queries. The notes taken here will serve me well in the future.</h3>
 
   <br>
@@ -36,7 +51,7 @@
 
   </ol>
   <hr />
-  <h2 class="date">Wednesday May 19th, 2017</h2>
+  <h2 class="date">Wednesday June 1st, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">I'm back to SQL. Getting comfortable in closures.
     Reviewing and taking notes on SQL lectures. It's going well.
