--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -26,7 +26,8 @@
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>Ensure connection to DB</li>
+    <li>Create endpoints to DB</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
