--- a/states/sql/sql.html
+++ b/states/sql/sql.html
@@ -466,9 +466,29 @@ Only one will return.
 </div>
 </div>
 </div>
-<div class="plain-frame3">
-
+<div class="simple-wine-frame">
+Endpoint receiving a query from url conditionally returning 'res'
+  <pre class="dk-frame w80">app.get('/petsbytag', function(req, res) {  <i class="mutedOrange">.sql fileName</i>
+  let tag = req.query.tag;  <i class="mutedOrange"> place query from URL (<span class="wh">?tag=happy</span>) <sup class="ltred"> no quotes</sup> onto var</i>
+    if (!tag) {  <i class="mutedOrange">If it doesn't exist, it's 'undefined' & falsey.</i>
+      db.get_pets(function(err, pets) {  <i class="mutedOrange">Note: Here, the .sql file has shifted to complete table</i>
+        res.send({  <i class="mutedOrange">Creating an Obj to return</i>
+          desc: "Please supply a tag. Here are pets unfiltered.",  <i class="mutedOrange">Description</i>
+          pets: pets  <i class="mutedOrange">Returning complete table</i>
+      })
+    })
+  } else {   <i class="mutedOrange">If query is truthy...</i>
+    db.pets_by_tag(<b class="ltgreen">[tag]</b>, function(err, response) {  <i class="mutedOrange">massive allows placement of query onto the <span class="ltgreen">$1</span> in the .sql file.</i>
+      res.send({  <i class="mutedOrange">create object to return</i>
+        desc: "Success. The tag " + tag + ' exists',  <i class="mutedOrange">Message to user</i>
+        data: response  <i class="mutedOrange">Response is put onto the key 'response'</i>
+      })
+    })
+  }
+});</pre>
 </div>
+
+<hr>
 </div>
   </pre>
   <!-- end of pre for all -->
