--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,20 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Saturday June 4th, 2017</h2>
+  <h4 class="sleep">Slept: ? hours</h4><br><br>
+  <h3 class="subtitle">Yesterday was a day of facing down DB anxiety. It was extremely gratifying & confidence building. To be able to take the time and learn it and enjoy it...So much damned fun! --Hard and frustrating, but fun!</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Friday June 3rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Contending with real life well. So glad to get DB up and running. Heroku is much easier now. Connecting with massive with the <em>"connectionString"</em> ? --not so much. Will get to that today.
@@ -31,7 +45,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Endpoints are done</li>
+    <li><a href="https://vimeo.com/199048947" target="_blank">This</a> final vid in a series on SQL talks about creating queries for massive.js & sql injection towards the last 20 minutes.</li>
   </ol>
   <hr />
   <h2 class="date">Thursday, June 2nd, 2017</h2>
