--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -19,17 +19,18 @@
     <hr />
   -->
   <h2 class="date">Saturday June 4th, 2017</h2>
-  <h4 class="sleep">Slept: ? hours</h4><br><br>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Yesterday was a day of facing down DB anxiety. It was extremely gratifying & confidence building. To be able to take the time and learn it and enjoy it...So much damned fun! --Hard and frustrating, but fun!</h3>
-
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
+    <li>more endpoints</li>
+    <li>post endpoint with svg</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>more endpoints</li>
+    <li>Placed svg into db and retrieved it to the html</li>
   </ol>
   <hr />
   <h2 class="date">Friday June 3rd, 2017</h2>
